--- a/arch/aarch64/Makefile
+++ b/arch/aarch64/Makefile
@@ -1,1 +1,1 @@
-obj-y = src/cache.o src/context.o src/startup.o src/vector.o 
+obj-y = src/interrupt.o src/cache.o src/context.o src/startup.o src/vector.o 
