Fixed: function of entry_point.S unable be linked to kernel
Signed-off-by: hkdywg <hkdywg@163.com>

--- a/arch/aarch64/Makefile
+++ b/arch/aarch64/Makefile
@@ -1,1 +1,2 @@
-obj-y = src/interrupt.o src/cache.o src/context.o src/startup.o src/vector.o 
+obj-y = src/trap.o src/interrupt.o src/cache.o src/context.o src/startup.o src/vector.o \
+		src/entry_point.o
