Add: message queue module of ipc
Signed-off-by: hkdywg <hkdywg@163.com>

--- a/ipc/Makefile
+++ b/ipc/Makefile
@@ -1,1 +1,6 @@
-obj-y := ipc_base.o mutex.o semaphore.o event.o mailbox.o
+obj-y := ipc_base.o 
+obj-y += mutex.o 
+obj-y += semaphore.o 
+obj-y += event.o 
+obj-y += mailbox.o
+obj-y += msg_queue.o
