--- a/arch/aarch64/Makefile
+++ b/arch/aarch64/Makefile
@@ -1,2 +1,7 @@
-obj-y = src/trap.o src/interrupt.o src/cache.o src/context.o src/startup.o src/vector.o \
-		src/entry_point.o
+obj-y =  src/trap.o 
+obj-y += src/interrupt.o 
+obj-y += src/cache.o 
+obj-y += src/context.o 
+obj-y += src/startup.o 
+obj-y += src/vector.o 
+obj-y += src/entry_point.o
